# chopter

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  config.txt  main.cpp
src/: Event.cpp  Event.hpp  draw.cpp  loop.cpp  main.cpp
src/control/: Config.cpp  Config.hpp  Controller.cpp  Controller.hpp  Environment.cpp  Environment.hpp  Event.cpp  Event.hpp  GameController.cpp  GameController.hpp  Logic.cpp  Logic.hpp  MainController.cpp  MainController.hpp  color.hpp  draw.cpp  loop.cpp  score.cpp  score.hpp
src/control/controllers/: GameController.cpp  GameController.hpp  GameController_Draw.cpp  MainController.cpp  MainController.hpp
src/core/: Chopter.cpp  Chopter.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  Point.hpp  Score.cpp  Score.hpp  utils.cpp  utils.hpp
src/visual/: Button.cpp  Button.hpp  Label.cpp  Label.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  TextButton.cpp  TextButton.hpp  utils.cpp  utils.hpp
